# shortlink

./: readme.md
service/: .dockerignore  .env.example  Cargo.toml  dev.dockerfile  docker-compose.yaml  routes.md  rust-toolchain.toml  tikv.dockerfile
service/crate/aws-lambda-app/: Cargo.toml
service/crate/service-app/: Cargo.toml
service/crate/service-app/src/: config.rs  entity.rs  lib.rs  main.rs  router.rs  signal.rs  util.rs
service/crate/service-app/tests/: url.rs
service/crate/service-app/tests/setup/: mod.rs
service/crate/usage-aggregator/: Cargo.toml
service/openapi/: main.yaml
service/openapi/component/: base.yaml  short_url.yaml
service/script/: pre-cargo.sh  start-dev.sh
