[package]
name = "aws-lambda-app"
version = "0.1.0"
edition.workspace = true
authors.workspace = true
license-file.workspace = true
rust-version.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.27", features = ["full"] }
