[package]
name = "service-app"
version = "0.1.0"
edition.workspace = true
authors.workspace = true
license-file.workspace = true
rust-version.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "service-app"
path = "src/main.rs"

[dependencies]
tokio = { version = "1.27", features = ["full"] }
axum = { version = "0.6.16" }

# client
surrealdb = { version = "1.0.0-beta" }

# log
tracing = { version = "0.1", default-features = false, features = ["std"] }
tracing-subscriber = { version = "0.3", default-features = false, features = ["std", "fmt", "tracing-log"] }

# data-type
serde = { version = "1.0.160", default-features = false, features = ["std", "derive"] }
time = { version = "0.3", default-features = false, features = ["std", "serde"] }

# util
once_cell = { version = "1.17" }
