[package]
name = "service-app"
version = "0.1.0"
edition.workspace = true
authors.workspace = true
license-file.workspace = true
rust-version.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "service_lib"
path = "src/lib.rs"

[[bin]]
name = "service-app"
path = "src/main.rs"

[dependencies]
tokio = { version = "1.27", features = ["full"] }
axum = { version = "0.6.16", default-features = false, features = ["http1", "http2", "tokio", "tracing", "json", "query", "matched-path"] }

# client
surrealdb = { version = "1.0.0-beta", features = ["kv-mem"] }

# log
tracing = { version = "0.1", default-features = false, features = ["std"] }
tracing-subscriber = { version = "0.3", default-features = false, features = ["std", "fmt", "tracing-log"] }

# data-type
serde = { version = "1.0.160", default-features = false, features = ["std", "derive"] }
url = { version = "2.3.1", features = ["serde"] }
time = { version = "0.3", default-features = false, features = ["std", "serde", "formatting", "parsing"] }
ulid = { version = "1.0.0" }
sha2 = { version = "0.10.6" }
base62 = { package = "base-62", version = "0.1" }

# util
once_cell = { version = "1.17" }
rand = "0.8.5"

[dev-dependencies]
dotenv = { version = "0.15.0" }
serial_test = { version = "0.9.0" }

reqwest = { version = "0.11.12", default-features = false, features = ["rustls-tls", "json", "gzip"] }

